tests/snapshots/scripts_sanitized/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/MBS - ID 44/WWW - ID 107/MonkeyBreadSoftware - ID 109.txt.snap
---
source: src/main.rs
expression: output_content
---
# 20121025 MrW 

Fehleraufzeichnung setzen [ ON ]
AnwenderAbbruchZulassen setzen [ OFF ]

# Script settings
Variable setzen [ $URL ; "http://www.monkeybreadsoftware.de/" ]

URL öffnen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "111" ] ⚠️⚠️⚠️
